deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-expensesreport-service
spec:
  selector:
    app: app-expensesreport
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
