deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-expensesreport-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: expensesreport.yelluh.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-expensesreport-service
                port:
                  number: 80
